fixing font by removing ios line that was broken, defaulting to dark mode hackily

--- a/themes/LeaveIt/assets/css/_common/_page/home.scss
+++ b/themes/LeaveIt/assets/css/_common/_page/home.scss
@@ -7,7 +7,7 @@
     .avatar {
       padding: 10px;
       img {
-        width: 128px;
+        width: 256px;
         height: auto;
         display: inline-block;
         -webkit-border-radius: 100%;
